# masterThesisRepository

./: CMakeLists.txt  README.md  package.xml
matlab/grafics/: GraficosIDent.m  identwork.mat  validwork.mat
matlab/hinf/: drone_nao_linear_V3_MF_hinf8.slx  projeto_Drone_Hinf_pratico.m
matlab/lqr/: drone_nao_linear_V3_MF_LQR.slx  projeto_Drone_LQR_pratico.m
matlab/model/: dados_ar_drone.m  drone_nao_linear_V3.slx
results/experimentos_sem_pert/circulo/hinf/: hinf circulo sempertu.rar
results/experimentos_sem_pert/circulo/lqr/: lqr circulo sempertu.rar
src/autopilot/: DroneController.cpp  DroneController.h
